WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127759
HTMLMediaElement::m_platformLayerBorrowed is uninitialized.
https://bugs.webkit.org/show_bug.cgi?id=127759
Summary
HTMLMediaElement::m_platformLayerBorrowed is uninitialized.
Jeremy Jones
Reported
2014-01-27 20:39:33 PST
HTMLMediaElement::m_platformLayerBorrowed is uninitialized.
Attachments
Patch
(1.26 KB, patch)
2014-01-28 10:43 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-01-28 10:43:31 PST
Created
attachment 222465
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-28 11:21:46 PST
Comment on
attachment 222465
[details]
Patch Clearing flags on attachment: 222465 Committed
r162945
: <
http://trac.webkit.org/changeset/162945
>
WebKit Commit Bot
Comment 3
2014-01-28 11:21:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug