HTMLMediaElement::m_platformLayerBorrowed is uninitialized. https://bugs.webkit.org/show_bug.cgi?id=127759

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-01-28
Reviewed by Eric Carlson.

Initalize m_platformLayerBorrowed to false.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement):

Canonical link: https://commits.webkit.org/145784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162945 268f45cc-cd09-0410-ab3c-d52691b4dbfc